# maestro

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yaml  mypy.ini  objects.inv  pyproject.toml  setup.py  sitemap.xml  tox.ini  versions.json
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: docs.yml  maestro-tests.yml  publish-dev-docs.yml  publish-docs.yml  publish-pre-release.yml  publish-release-docs.yml  publish-release.yml  publish-test-release.yml  pypi-publish.yml  pypi-test-publish.yml  test-doc.yml  welcome.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/florence-2/: index.html
0.1.0/get_started/: index.html
0.1.0/lmms/: index.html
0.1.0/markers/: index.html
0.1.0/metrics/: index.html
0.1.0/search/: search_index.json
0.1.0/tasks/: index.html
0.1.0/visualizers/: index.html
1.0.0/: 404.html  CNAME  index.html  sitemap.xml
1.0.0/models/florence_2/: index.html
1.0.0/models/paligemma_2/: index.html
1.0.0/models/qwen_2_5_vl/: index.html
1.0.0/search/: search_index.json
cookbooks/: grounding_dino_and_gpt4_vision.ipynb  maestro_florence2_object_detection.ipynb  maestro_florence2_visual_question_answering.ipynb  maestro_florence2_visual_question_answering_detection.ipynb  maestro_florence_2_object_detection.ipynb  maestro_paligemma_2_json_extraction.ipynb  maestro_paligemma_object_detection.ipynb  maestro_qwen2_5_vl_json_extraction.ipynb  multimodal_maestro_gpt_4_vision.ipynb
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/datasets/jsonl/: index.html
develop/florence-2/: index.html
develop/metrics/: index.html
develop/models/florence_2/: index.html
develop/models/paligemma_2/: index.html
develop/models/qwen_2_5_vl/: index.html
develop/search/: search_index.json
develop/tasks/: index.html
develop/theme/partials/: comments.html
docs/: florence-2.md  get_started.md  index.md  lmms.md  markers.md  metrics.md  tasks.md  visualizers.md
docs/datasets/: jsonl.md
docs/models/: florence_2.md  paligemma_2.md  qwen_2_5_vl.md
docs/pipelines/: sam_segmentation.md
docs/theme/partials/: comments.html
examples/: image.py
get_started/: index.html
lmms/: index.html
maestro/: __init__.py  primitives.py  visualizers.py
maestro/cli/: __init__.py  env.py  introspection.py  main.py  utils.py
maestro/llms/: llm.py
maestro/lmms/: gpt4.py
maestro/markers/: sam.py
maestro/pipelines/: base.py  sam_segmentation.py
maestro/postprocessing/: mask.py  text.py
maestro/trainer/: __init__.py  logger.py
maestro/trainer/common/: __init__.py  callbacks.py  datasets.py  env.py  metrics.py  peft.py  training.py
maestro/trainer/common/configuration/: env.py
maestro/trainer/common/data_loaders/: datasets.py  jsonl.py
maestro/trainer/common/datasets/: base.py  coco.py  core.py  jsonl.py  roboflow.py
maestro/trainer/common/utils/: device.py  file_system.py  leaderboard.py  metrics.py  metrics_tracing.py  path.py  reproducibility.py  seed.py
maestro/trainer/models/florence_2/: __init__.py  checkpoints.py  core.py  data_loading.py  detection.py  entities.py  entrypoint.py  inference.py  loaders.py  metrics.py  training.py
maestro/trainer/models/paligemma/: __init__.py  checkpoints.py  core.py  data_loading.py  entrypoint.py  metrics.py  training.py
maestro/trainer/models/paligemma_2/: checkpoints.py  checpoints.py  core.py  entrypoint.py  inference.py  loaders.py
maestro/trainer/models/qwen2-vl/: loaders.py
maestro/trainer/models/qwen2_vl/: checkpoints.py  loaders.py
maestro/trainer/models/qwen_2_5_vl/: checkpoints.py  core.py  entrypoint.py  inference.py  loaders.py
maestro/wrappers/: sam.py
markers/: index.html
multimodalmaestro/: __init__.py  primitives.py
multimodalmaestro/lmms/: gpt4.py
multimodalmaestro/markers/: sam.py
multimodalmaestro/postprocessing/: mask.py  text.py
requirements/: requirements.docs.txt  requirements.test.txt  requirements.txt
search/: search_index.json
setofmark/: __init__.py  postprocess.py  visualizers.py
setofmark/markers/: sam.py
setofmark/postprocessing/: mask.py  text.py
som/: __init__.py  core.py  gpt4.py  mask.py  postprocess.py  utils.py
som/lmms/: gpt4.py
som/markers/: sam.py
test/: test_mask.py  test_postprocess.py  test_utils.py
test/meastro/trainer/common/datasets/: test_roboflow.py
test/meastro/trainer/models/florence_2/: test_detection.py
test/pipelines/: test_sam_segmentation.py
visualizers/: index.html
